Sns (#17)
* Added docker compose with local stack.

* Added sns topic creation in Infrastructure stack

* Small changes to infrastructure stack to make it more unified.

* Added SNSConfig file and all necessary dependencies and environment variables for it to work.

* Added snsPublisher.

* Small changes for easy local application launch

* Added logger for Publish